--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="links-container">
      <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank" class="link">Spotify</a>
      <a href="https://www.youtube.com/results?search_query=snoop+dogg" target="_blank" class="link">YouTube</a>
-     <a href="https://www.snoopermarket.com" target="_blank" class="link">Sooper Market</a>
+     <a href="https://www.snoopermarket.com" target="_blank" class="link">Snooper Market</a>
      <a href="https://app.rocketseat.com.br/discover/challenges/social-tree" target="_blank" class="link">Social Tree Challenge</a>
 </div>
 
