--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <img src="./assets/avatar.png" alt="">
 </div>
 
-<span class="insta-user">@BigSnoop</span>
-<span class="insta-user">A Social-Tree Basic Project</span>
+<span class="insta-user">Marcel Santos</span>
+<span class="insta-user"> </span>
 
 <div class="links-container">
      <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank" class="link">Spotify</a>
