--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SD</title>
+    <title>SNOOP DOGG</title>
 </head>
 <body>
    
@@ -23,8 +23,8 @@
 <div class="links-container">
      <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank" class="link">Spotify</a>
      <a href="https://www.youtube.com/results?search_query=snoop+dogg" target="_blank" class="link">YouTube</a>
-     <a href="https://www.snoopermarket.com" target="_blank" class="link">Snooper Market</a>
-     <a href="https://app.rocketseat.com.br/discover/challenges/social-tree" target="_blank" class="link">Social Tree Challenge</a>
+     <a href="https://www.snoopermarket.com" target="_blank" class="link">Market</a>
+     <a href="https://www.instagram.com/snoopdogg/" target="_blank" class="link">Instagram</a>
 </div>
 
 <div class="socials-container">
