--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SNOOP DOGG</title>
+    <title>Snoop Dogg</title>
 </head>
 <body>
    
@@ -17,7 +17,7 @@
 <img src="./assets/avatar.png" alt="">
 </div>
 
-<span class="insta-user">Marcel Santos</span>
+<span class="insta-user">SnoopDogg</span>
 <span class="insta-user"> </span>
 
 <div class="links-container">
