--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
      <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank" class="link">Spotify</a>
      <a href="https://www.youtube.com/results?search_query=snoop+dogg" target="_blank" class="link">YouTube</a>
      <a href="https://www.snoopermarket.com" target="_blank" class="link">Market</a>
-     <a href="https://www.instagram.com/snoopdogg/" target="_blank" class="link">Instagram</a>
 </div>
 
 <div class="socials-container">
@@ -33,7 +32,7 @@
     </a>
     <a href="https://www.twitch.tv" class="social"><img src="./assets/twitch.svg" alt="">
     </a>
-    <a href="instagram.com" class="social"><img src="./assets/instagram.svg" alt="">
+    <a href="instagram.com/snoopdogg" class="social"><img src="./assets/instagram.svg" alt="">
     </a>
     <a href="https://www.linkedin.com" class="social"><img src="./assets/linkedin.svg" alt="">
     </a>
