--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <img src="./assets/avatar.png" alt="">
 </div>
 
-<span class="insta-user">SnoopDogg</span>
-<span class="insta-user">SnoopDogg</span>
+<span class="insta-user">Snoop Dogg</span>
+<span class="insta-user">Social Tree</span>
 
 <div class="links-container">
      <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank" class="link">Spotify</a>
