--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 
 <span class="insta-user">Snoop Dogg</span>
-<span class="insta-user">Social Tree</span>
+<span class="insta-user"></span>
 
 <div class="links-container">
      <a href="https://open.spotify.com/artist/7hJcb9fa4alzcOq3EaNPoG" target="_blank" class="link">Spotify</a>
