--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </a>
     <a href="https://www.twitch.tv" class="social"><img src="./assets/twitch.svg" alt="">
     </a>
-    <a href="instagram.com/snoopdogg" class="social"><img src="./assets/instagram.svg" alt="">
+    <a href="https://instagram.com/snoopdogg" class="social"><img src="./assets/instagram.svg" alt="">
     </a>
     <a href="https://www.linkedin.com" class="social"><img src="./assets/linkedin.svg" alt="">
     </a>
